[gd_scene load_steps=7 format=3 uid="uid://b8a1h4xafe2jp"]

[ext_resource type="Script" path="res://Scripts/nivel1_Mario/nivelMario.gd" id="1_drflq"]
[ext_resource type="PackedScene" uid="uid://cwqd7o7cxh88e" path="res://Escenas/nivel1_Mario/escenario.tscn" id="2_ou1fc"]
[ext_resource type="PackedScene" uid="uid://c3icwgvb0l2e3" path="res://Escenas/nivel1_Mario/Interacciones/interacciones.tscn" id="3_p6jtr"]

[sub_resource type="Animation" id="Animation_16nwd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_ry5yg"]
resource_name = "new_animation"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m64uu"]
_data = {
"RESET": SubResource("Animation_16nwd"),
"new_animation": SubResource("Animation_ry5yg")
}

[node name="nivelMario" type="Node2D"]
script = ExtResource("1_drflq")

[node name="Escenario" parent="." instance=ExtResource("2_ou1fc")]
position = Vector2(-51, -10)

[node name="Interacciones" parent="." instance=ExtResource("3_p6jtr")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m64uu")
}

[node name="ColorRect" type="ColorRect" parent="."]
z_index = 2
offset_left = -1446.0
offset_top = 796.0
offset_right = 5465.0
offset_bottom = 6059.0
color = Color(0, 0, 0, 1)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(1898, 2047)

[connection signal="signal_button_pressed" from="." to="." method="_on_signal_button_puzle1_pressed"]
